--- a/regress_ratings.ipynb
+++ b/regress_ratings.ipynb
@@ -338,7 +338,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base = json.load(open('BBGM_ASG_2022_2022_preseason.json','rb'))"
+    "ROSTER_FILE = 'BBGM_EOS_2022_Post_2022_postseason.json'\n",
+    "base = json.load(open(ROSTER_FILE,'rb'))"
    ]
   },
   {
@@ -725,9 +726,9 @@
     "    base = json.load(open(filename,'rb'))\n",
     "    players = base['players']\n",
     "    return players,base\n",
-    "playersOG,base = load_roster('BBGM_ASG_2022_2022_preseason.json')\n",
+    "playersOG,base = load_roster(ROSTER_FILE)\n",
     "abbrev_to_tid = {_['abbrev']:_['tid'] for _ in base['teams']}\n",
-    "abbrev_to_tid['BRK'] = abbrev_to_tid['BKN']\n",
+    "#abbrev_to_tid['BRK'] = abbrev_to_tid['BKN']\n",
     "abbrev_to_tid['CHO'] = abbrev_to_tid['CHA']\n",
     "abbrev_to_tid['GSW'] = abbrev_to_tid['GS']\n",
     "abbrev_to_tid['NOP'] = abbrev_to_tid['NOL']\n",
@@ -814,7 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('auto_roster_{}.json'.format(GEN_YEAR),'wt') as fp:\n",
+    "with open('auto_roster_{}_post.json'.format(GEN_YEAR),'wt') as fp:\n",
     "    json.dump(base,fp, sort_keys=True)"
    ]
   }
