--- a/estimateSOVR.ipynb
+++ b/estimateSOVR.ipynb
@@ -19,7 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('BBGM_League_1_all_seasons_Average_Stats.csv')"
+    "df = pd.read_csv('BBGM_League_109_all_seasons_Average_Stats.csv')\n",
+    "df = df[df['MP']*df['G'] > 10]"
    ]
   },
   {
@@ -46,8 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats_to_est = ['FT','FTA','FG','FGA','ORB','DRB','AST','TOV','STL','Blk','PF','PTS','3P','3PA','BA']\n",
-    "sT = [_ +'p36' for _ in stats_to_est]"
+    "plt.hist(df['+/-'])"
    ]
   },
   {
@@ -56,8 +56,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# full\n",
+    "stats_to_est = [ 'FG', 'FGA', '3P', '3PA',  '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'TOV', 'STL', 'BLK', 'BA', 'PF', 'PTS']\n",
+    "# pruned by hand based on t-values, R^2 = .804\n",
+    "stats_to_est = [                    '3PA',        '2PA',        'FTA',              'TRB',       'AST', 'TOV', 'STL', 'BLK',       'PF', 'PTS']\n",
+    "#R^2 = .773 w/o +/-, 0.788 with\n",
+    "stats_to_est = [                                                                    'TRB',        'AST', 'TOV', 'STL', 'BLK',      'PF', 'PTS', '+/-']\n",
+    "\n",
+    "sT = [_ +'p36' for _ in stats_to_est]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_36_stats = []\n",
     "for s in stats_to_est:\n",
-    "    df[s + 'p36'] = 36*df[s]/np.maximum(df['MP'],1e-6)"
+    "    df[s + 'p36'] = 36*df[s]/np.maximum(df['MP'],1)\n",
+    "    p_36_stats.append(s+'p36')\n",
+    "p_36_stats = p_36_stats #+['+/-']#+ ['TS%']"
    ]
   },
   {
@@ -66,9 +85,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs = df[df.MP*df.G > 850]\n",
-    "res = sm.RLM(dfs['Ovr'],sm.add_constant(dfs[stats_to_est])).fit()\n",
-    "res.summary()"
+    "res = sm.WLS(df['Ovr'],sm.add_constant(df[p_36_stats]),df['MP']*df['G']).fit()\n",
+    "res.summary() # -6.7306e+05 1.346e+06 1.005e+05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import sklearn.linear_model as linear_model\n",
+    "clf = linear_model.RidgeCV(np.logspace(-3,3,101))\n",
+    "p = 1\n",
+    "clf.fit(df[p_36_stats],(df['Ovr'])**p,df['MP']*df['G'])\n",
+    "df['sOVR'] = np.maximum(0,clf.predict(df[p_36_stats]))**(1/p)\n",
+    "plt.scatter(df['Ovr'],df['sOVR'],s=5,alpha=0.5)\n"
    ]
   },
   {
@@ -77,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(dfs['Ovr'],res.predict(),s=5,alpha=0.5)"
+    "plt.scatter(df['Ovr'],res.predict(),s=5,alpha=0.5)"
    ]
   },
   {
@@ -86,8 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs['sOVR'] = res.predict()\n",
-    "dfs['PS'] = dfs['Ovr']/dfs['sOVR']"
+    "df['sOVR'] = clf.predict(df[p_36_stats])**(1/p)#res.predict()\n",
+    "df['PS'] = df['Ovr']/df['sOVR']"
    ]
   },
   {
@@ -105,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(dfs[['Age','PS','Ovr','sOVR']].groupby('Age').mean()['PS'])\n",
+    "plt.plot(df[['Age','PS','Ovr','sOVR']].groupby('Age').mean()['PS'])\n",
     "plt.xlim(20,44)\n",
     "plt.ylabel('Ovr ÷ sOVR')\n",
     "plt.xlabel('Age')"
@@ -138,8 +172,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dft = dfs.groupby(['pid','Age']).mean()\n",
-    "df['sOVR'] = res.predict(sm.add_constant(df[stats_to_est]))\n",
     "dft = df.groupby(['pid','Age']).mean()"
    ]
   },
@@ -176,19 +208,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('4 year value by age\\nage [pot ovr]')\n",
+    "print('5 year value by age\\nage scale [pot ovr]')\n",
+    "sA = []\n",
+    "sB = []\n",
     "for age in sorted(p_y.keys()):\n",
     "    Xy = np.array(p_y[age])\n",
     "    if (Xy[:,0] == Xy[:,1]).all():\n",
     "        Xy = Xy[:,1:]\n",
     "    res2 = sm.OLS(Xy[:,-1],Xy[:,:-1]).fit()\n",
-    "    print(age,np.round(res2.params,2))"
+    "    v = res2.params\n",
+    "    vS = sum(v)\n",
+    "    sA.append((age,vS))\n",
+    "    sB.append((age,v[0]/vS))\n",
+    "    print(age,np.round(vS,2),np.round(v/vS,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sA = np.array(sA)\n",
+    "plt.plot(sA[:,0],sA[:,1])\n",
+    "plt.xlim(20,40)\n",
+    "plt.xlabel('age')\n",
+    "plt.ylabel('multi-year value')\n",
+    "plt.title('4 year [reg tree]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sB = np.array(sB)\n",
+    "plt.plot(sB[:,0],sB[:,1])\n",
+    "plt.xlim(20,28)\n",
+    "plt.xlabel('age')\n",
+    "plt.ylabel('potential weight')\n",
+    "plt.title('4 year [reg tree]')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
